# lu-fastapi-backend

./: .gitignore  Dockerfile  docker-compose.yml  main.py  pyproject.toml  readme.md  requirements.txt
alembic/: env.py
app/: __init__.py
app/core/: config.py  database.py  security.py
app/models/: __init__.py  clients.py  order_products.py  orders.py  products.py  user.py  users.py
app/repositories/: __init__.py  clients.py  order_products.py  orders.py  products.py  user_repository.py  users.py
app/routes/: __init__.py  auth.py  auth_routes.py  clients.py  order_products.py  orders.py  products.py  user.py  users.py
app/schemas/: clients.py  order_products.py  orders.py  products.py  user.py  users.py
app/services/: auth_service.py  clients.py  order_products.py  orders.py  products.py  users.py
app/utils/: check_unique_fields.py  fecth_by_id_or_404.py  get_by_field_or_404.py  get_by_id_or_404.py  not_found.py
tests/: __init__.py  conftest.py  test_clients.py  test_database_connection.py  test_orders.py  test_products.py  test_products_extra.py  test_users.py
