[tool.poetry]
name = "lu-fastapi-backend"
version = "1.0.0"
description = ""
authors = ["João Pedro <11joao44@gmail.com>"]
readme = "README.md"
packages = [ { include = "app" } ]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
fastapi = ">=0.115.12,<0.116.0"
uvicorn = { extras = ["standard"], version = ">=0.34.2,<0.35.0" }
sqlalchemy = ">=2.0.41,<3.0.0"
psycopg2-binary = ">=2.9.10,<3.0.0"
alembic = ">=1.16.1,<2.0.0"
pydantic = { extras = ["email"], version = ">=2.11.5,<3.0.0" }
pydantic-settings = ">=2.9.1,<3.0.0"
python-jose = { extras = ["cryptography"], version = ">=3.4.0,<4.0.0" }
passlib = { extras = ["bcrypt"], version = ">=1.7.4,<2.0.0" }
python-multipart = ">=0.0.20,<0.0.21"
python-dotenv = ">=1.1.0,<2.0.0"
requests = ">=2.32.3,<3.0.0"
tqdm = ">=4.67.1,<5.0.0"
email-validator = ">=2.2.0,<3.0.0"
asyncpg = ">=0.30.0,<0.31.0"
bcrypt = "4.0.1"
openai = ">=1.82.0,<2.0.0"

[tool.poetry.dev-dependencies]
pytest = "^8.3.5"
pytest-mock = "^3.14.0"
httpx = "^0.28.1"
pytest-asyncio = "^0.26.0"
ipykernel = "^6.29.5"
aiosqlite = "^0.21.0"

[tool.poetry.scripts]
start = "uvicorn app.main:app --host=0.0.0.0 --port=${PORT:-10000}"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
